# rumblr

./: .travis.yml  Cargo.toml  README.md
examples/: get_blog_info.rs  test_methods.rs
src/: blog.rs  client.rs  error.rs  format.rs  http_method.rs  lib.rs  post_type.rs  request.rs  utility.rs
src/blog/: avatar.rs  info.rs  mod.rs  post.rs
src/blog_methods/: mod.rs
src/data/: avatar.rs  blog.rs  blog_info.rs  edit.rs  meta.rs  mod.rs  post.rs  root.rs  user.rs  user_info.rs
src/user/: info.rs  mod.rs
src/user_methods/: info.rs  mod.rs
tests/: integration_test.rs
tests/mock/: user.json
