[package]
name = "rumblr"
version = "0.2.0"
authors = ["doomy"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9.24" }
serde = "*"
serde_json = "*"
serde_derive = "*"
ring = "*"
oauthcli = { git = "https://github.com/piedoom/rust-oauthcli" }

[dev-dependencies]
mockito = "0.15.0"

[[example]]
name = "test_methods"
